[gd_scene load_steps=9 format=3 uid="uid://m5qomxk6amc4"]

[ext_resource type="Script" uid="uid://b2dei8vuk454c" path="res://Scenes/TrainingProgram/parts/GameplayLoop/parts/GridSelect/grid_select.gd" id="1_7gsg3"]
[ext_resource type="PackedScene" uid="uid://c7n7pxhkwpt0k" path="res://UI/SvgIcon/SVGIcon.tscn" id="2_kdf3w"]
[ext_resource type="LabelSettings" uid="uid://bnryvwswipkov" path="res://Fonts/font_2_32_white.tres" id="3_kdf3w"]
[ext_resource type="LabelSettings" uid="uid://bhvjm3opd1txx" path="res://Fonts/game/label_small.tres" id="6_gdquo"]
[ext_resource type="PackedScene" uid="uid://diewdd1a4yfp1" path="res://Components/BtnControls/BtnControls.tscn" id="7_vcb3m"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_o3m7s"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2y0xg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0a1v0"]

[node name="GridSelect" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_o3m7s")
script = ExtResource("1_7gsg3")

[node name="TabControl" type="Control" parent="."]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="TabControl"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -253.0
offset_right = 253.0
offset_bottom = 86.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_2y0xg")

[node name="MarginContainer" type="MarginContainer" parent="TabControl/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 30

[node name="Categories" type="VBoxContainer" parent="TabControl/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Tabs" type="HBoxContainer" parent="TabControl/PanelContainer/MarginContainer/Categories"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="HeaderControl" type="Control" parent="."]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="HeaderControl"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 58.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_2y0xg")

[node name="MarginContainer" type="MarginContainer" parent="HeaderControl/PanelContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 30

[node name="HBoxContainer" type="HBoxContainer" parent="HeaderControl/PanelContainer/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="SVGIcon2" parent="HeaderControl/PanelContainer/MarginContainer/HBoxContainer" instance=ExtResource("2_kdf3w")]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
icon = 27
icon_color = Color(1, 1, 1, 1)
icon_size = Vector2(25, 25)

[node name="HeaderLabel" type="Label" parent="HeaderControl/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "LABEL"
label_settings = ExtResource("3_kdf3w")

[node name="SVGIcon" parent="HeaderControl/PanelContainer/MarginContainer/HBoxContainer" instance=ExtResource("2_kdf3w")]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
icon = 28
icon_color = Color(1, 1, 1, 1)
icon_size = Vector2(25, 25)

[node name="ContentControl" type="Control" parent="."]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="ContentControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_0a1v0")

[node name="MarginContainer" type="MarginContainer" parent="ContentControl/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_bottom = 0

[node name="VBoxContainer" type="VBoxContainer" parent="ContentControl/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="ContentControl/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = -10

[node name="HBoxContainer" type="HBoxContainer" parent="ContentControl/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="LessBtn" parent="ContentControl/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer" instance=ExtResource("2_kdf3w")]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
icon = 28
icon_color = Color(1, 1, 1, 1)
icon_size = Vector2(25, 25)

[node name="MarginContainer" type="MarginContainer" parent="ContentControl/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0

[node name="GridContainer" type="GridContainer" parent="ContentControl/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 3

[node name="MoreBtn" parent="ContentControl/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer" instance=ExtResource("2_kdf3w")]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
icon = 27
icon_color = Color(1, 1, 1, 1)
icon_size = Vector2(25, 25)

[node name="AvailableLabel" type="Label" parent="ContentControl/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "0/1"
label_settings = ExtResource("6_gdquo")
horizontal_alignment = 1

[node name="BtnControls" parent="." instance=ExtResource("7_vcb3m")]
layout_mode = 2
